﻿##########################################
官方网站：https://www.pbootcms.com
标签手册：https://www.pbootcms.com/docs.html
版权所有：湖南翱云网络科技有限公司
##########################################

PbootCMS V2.0.6 build 2020-02-01
1、修复搜索结果关键字标红无法正常匹配大小写问题；

PbootCMS V2.0.5 build 2020-01-31
1、优化前台404.html，并支持内容内{info}自适应提示文字；
2、优化内容列表排序方式,并修复api使用随机排序无效问题；
3、修复后台入口文件修改名字后在线升级无法自适应问题；
4、新增lfield="a,b,*"限制列表查询字段，提高大数据时速度；
5、新增系统自适应入口文件子目录的能力；
6、新增留言及表单数据清空功能(管理员)；
7、新增留言及表单数据导出功能；
8、新增mark=1标签参数对搜索结果关键字进行标红，如：[search:title mark=1]；
9、其他问题修复与优化。

PbootCMS V2.0.4 build 2020-01-21
1、修复部分循环体控制参数无效问题；
2、修复一处安全漏洞，并全局加强系统安全过滤；
3、修复面包屑参数中不能使用html的问题；
4、修复API接口中post方式page无效问题；
5、新增程序全自动修改数据库名；
6、新增operate参数对标签进行加减乘除等运算，如：[list:i operate=+100]；
7、新增站点关闭功能；
8、新增站点访问IP黑白名单功能；
9、升级layui到最新版本。

PbootCMS V2.0.3 build 2019-10-25
1、修复一处PHP7环境下的安全漏洞；
2、新增关闭留言、表单功能的开关；
3、新增缩略图未上传时自动获取文章图片；
4、其他问题修复与优化。

PbootCMS V2.0.2 build 2019-09-15
1、伪静态时不再允许访问普通模式地址；
2、新增xx:ispics判断是否有多图；
3、新增页面内容关键词过滤功能；
4、升级layui到最新版本；
5、其他问题修复与优化。

PbootCMS V2.0.1 build 2019-08-15
1、优化编辑器工具栏浮动功能；
2、优化数据库备份文件名称;
3、优化基础环境组件检查功能；
4、修复默认模板一处链接错误；
5、修复API一处提示文字错误；
6、修复内链替换alt、title内容的问题;
7、去除内置测试账号，避免被恶意利用；

PbootCMS V2.0.0 build 2019-08-12
1、全新多种URL地址模式上线，模型、栏目、内容自由后台设置；
2、后台不再依赖pathinfo提高环境兼容性；
3、新增模型下面有栏目时不允许直接删除；
4、调整跨语言区域调用内容不再自动切换区域;
5、新增上下篇preico标签调用缩略图；
6、优化在线更新文件过多时下载问题；
7、优化sitamap生成格式；
8、其他大量系统框架优化及调整;
9、修复个别空间商的兼容性问题；

PbootCMS V1.4.3 build 2019-08-10
1、修复调用指定内容单页链接指向错误问题；
2、优化调整模板引擎链接生成过程；
3、优化在线更新功能；
4、新增升级到2.X分支版本的通道；
5、其他问题修复与优化；

PbootCMS V1.4.2 build 2019-07-22
1、修复内容tags为空时也有代码输出问题；
2、新增文章内链替换次数系统配置参数；
3、新增修改栏目时可选同步修改子栏目模板的功能；
4、新增批量添加栏目功能；
5、新增自定义表单添加到左侧导航菜单功能；
6、修复角色修改时区域数量显示不全问题；
7、修复IE浏览器翻页兼容性问题；
8、优化调整内链替换为长关键字优先；
9、新增连续多次登录失败后锁定IP功能；
10、新增自动记住上次添加内容栏目功能；
11、修复一处可能被利用的安全漏洞（感谢stick.wang@Zionlab）
12、新增表单提交验证码独立开关并优化邮箱提醒标题；
13、其他问题修复与优化；

PbootCMS V1.4.1 build 2019-07-12
1、扩大自定义字段默认长度；
2、升级layui为最新版本；
3、修复后台IE浏览器部分兼容性问题；
4、修复新增区域无法绑定域名问题；
5、修复图片无法拖动排序问题；
6、修复单独修改用户角色不成功问题；
7、修复微信分享参数导致安全拦截提示问题；
8、修复登录失败时验证码不刷新问题；