@@ -457,6 +457,14 @@
 		                   <div class="layui-form-mid layui-word-aux">秒</div>
 			            </div>
 			            
+			            <div class="layui-form-item">
+		                   <label class="layui-form-label">模板子目录</label>
+		                   <div class="layui-input-inline">
+		                  		<input type="text" name="tpl_html_dir" value="{$configs.tpl_html_dir.value}" placeholder="首次请手动移动模板文件到填写的目录！" class="layui-input">
+		                   </div>
+		                   <span class="layui-icon layui-icon-about tips" data-content="一定程度上防盗，如填 html，则默认模板情况下路径为 default/html 目录！"></span>
+			            </div>
+			            
 			           <div class="layui-form-item">
 		                     <label class="layui-form-label">IP黑名单</label>
 		                     <div class="layui-input-inline">
