@@ -4,7 +4,7 @@ return array(
     'app_version' => '2.0.6',
     
     // 发布时间
-    'release_time' => '20200201',
+    'release_time' => '20200224',
     
     // 修订版本
     'revise_version' => '0'
